# Riesgo-Engelamiento

./: .gitignore  main.py  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_WEB.md  README.md  SPEC.md  interfaz.md
resources/: Practicariesgodeengelamiento.txt  engelamiento.pen
src/engelamiento/: __init__.py
src/engelamiento/data/: __init__.py  loader.py
src/engelamiento/detection/: __init__.py  engelamiento.py  trajectory.py
src/engelamiento/visualization/: __init__.py  exporter.py  interactive_map.py  radar_map.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_detection.py  test_trajectory.py
