[project]
name = "engelamiento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "pdfplumber>=0.11.9",
    "plotly>=6.7.0",
    "xarray>=2026.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
